# Project
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[project]
name = "zipline-cli"
description = "Python 3 CLI for Diced/Zipline Upload Server"
authors = [{ name="Shane" }]
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
]
license = { text = "MIT License" }
#license = { file = "LICENSE" }

dependencies = [
    "python-decouple",
    "python-dotenv",
    "requests",
]

[dependency-groups]
dev = [
    "bandit",
    "black",
    "build",
    "isort",
    "mypy",
    "python-decouple-typed",
    "psycopg2",
    "ruff",
    "setuptools",
    "twine",
    "ty",
    "types-psycopg2",
    "types-requests",
    "wheel",
]

[project.scripts]
zipline = "zipline.zipline:main"

[project.urls]
Homepage = "https://cssnr.com/"
#Documentation = "https://zipline-cli.cssnr.com/"
Source = "https://github.com/cssnr/zipline-cli"
Issues = "https://github.com/cssnr/zipline-cli/issues"
Funding = "https://ko-fi.com/cssnr"

# Setup Tools
# https://setuptools.pypa.io/en/latest/
#[tool.setuptools.package-data]
#actions = ["py.typed"]
[tool.setuptools.dynamic]
version = { attr = "zipline.__version__" }
#version = {file = "version.txt"}

[tool.setuptools]
py-modules = ["zipline"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

# Build System
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

# Bandit
# https://bandit.readthedocs.io/en/latest/config.html
[tool.bandit]
exclude_dirs = ["venv"]
skips = ["B105", "B107"]

# Black
# https://black.readthedocs.io/en/stable/usage_and_configuration/
[tool.black]
line-length = 119
extend-exclude = '(\.github)'

# Coverage
# https://coverage.readthedocs.io/en/latest/
[tool.coverage.run]
omit = ["*.egg-info/*", ".github/*"]
source = ["src"]

# Isort
# https://pycqa.github.io/isort/docs/configuration/options.html
[tool.isort]
profile = "black"
lines_after_imports = 2
src_paths = ["src", "test"]
skip = ["venv", ".github"]

# Mypy
# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
#ignore_missing_imports = true
exclude = ["venv"]

# Ruff
# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 119
target-version = "py313"
extend-exclude = [".github"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q"]
