# Project
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[project]
name = "zipline-cli"
description = "Python 3 CLI File Uploader for Diced/Zipline v3/v4 Upload Server and Django Files."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
authors = [{ name = "Shane" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Communications :: File Sharing",
  "Topic :: Terminals",
  "Typing :: Typed",
]
dependencies = [
  "python-dotenv",
  "requests>=2,<3",
  "typer",
]
dynamic = ["version"]
# license = { file = "LICENSE" }

[project.urls]
Changelog = "https://github.com/cssnr/zipline-cli/releases"
Discord = "https://discord.gg/wXy6m2X8wY"
Documentation = "https://zipline-cli.cssnr.com/"
Funding = "https://ko-fi.com/cssnr"
GitHub = "https://github.com/cssnr/zipline-cli"
Homepage = "https://cssnr.com/"
Issues = "https://github.com/cssnr/zipline-cli/issues"

[project.scripts]
zipline = "zipline.cli:app"

[dependency-groups]
dev = [
  "bandit",
  "black",
  "build",
  "isort",
  "mypy",
  "psycopg2",
  "python-dotenv",
  "requests",
  "ruff",
  "setuptools",
  "tombi",
  "ty",
  "typer",
  "types-psycopg2",
  "types-requests",
  "validate-pyproject[all]",
  "wheel",
]

# Build System
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Bandit
# https://bandit.readthedocs.io/en/latest/config.html
[tool.bandit]
exclude_dirs = ["venv"]
skips = ["B105", "B107"]

# Black
# https://black.readthedocs.io/en/stable/usage_and_configuration/
[tool.black]
line-length = 119
extend-exclude = '(\.github)'

# Coverage
# https://coverage.readthedocs.io/en/latest/
[tool.coverage.run]
omit = ["*.egg-info/*", ".github/*"]
source = ["src"]

# Isort
# https://pycqa.github.io/isort/docs/configuration/options.html
[tool.isort]
profile = "black"
lines_after_imports = 2
src_paths = ["src", "test"]
skip = ["venv", ".github"]

# Mypy
# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
# ignore_missing_imports = true
exclude = ["venv"]

# Ruff
# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 119
target-version = "py313"
extend-exclude = [".github"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q"]

# Setup Tools
# https://setuptools.pypa.io/en/latest/
[tool.setuptools]
py-modules = ["zipline"]
include-package-data = true

[tool.setuptools.package-data]
zipline = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "zipline._version.__version__" }
# version = {file = "version.txt"}

[tool.setuptools.packages.find]
where = ["src"]
